docker setup success

--- a/compose.yaml
+++ b/compose.yaml
@@ -3,12 +3,11 @@ services:
   db:
     image: postgres
     environment:
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_DB: db123
+      POSTGRES_PASSWORD: /VUUc25h_BQZmg5
+      POSTGRES_USER: postgres.pwmyzjakquansgufouyw
+      POSTGRES_DB: postgres
 
   app:
     image: my-node-app
     ports: 
       - 8000:8000
-
