--- a/compose.yaml
+++ b/compose.yaml
@@ -3,9 +3,9 @@ services:
   db:
     image: postgres
     environment:
-      POSTGRES_PASSWORD: /VUUc25h_BQZmg5
-      POSTGRES_USER: postgres.pwmyzjakquansgufouyw
-      POSTGRES_DB: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_DB: MetroDB
 
   app:
     image: my-node-app
